--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" th:href="@{/common-styles.css}">
-  <link rel="stylesheet" th:href="@{/main-styles.css}">
+  <link rel="stylesheet" th:href="@{/css/common-styles.css}">
+  <link rel="stylesheet" th:href="@{/css/main-styles.css}">
   <title>StudyMate | Main Page</title>
 </head>
 <body>
