--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -7,7 +7,7 @@
       <a href="/" style="text-decoration: none; color: inherit;">Study-Mate</a>
     </div>
     <div class="nav-links">
-      <a th:href="@{/myclass.html}">내 강의실</a>
+      <a th:href="@{/study-mate/myclass}">내 강의실</a>
       <a th:href="@{/study-mate/search-page}">과목 찾기</a>
       <a th:href="@{/paid.html}">유료 서비스</a>
     </div>
